<resources>
    <string name="app_name">AndroidRestTestApp</string>
    <string name="connection_status_connected">Connected</string>
    <string name="connection_status_disconnected">Disconnected</string>
    <string name="default_ip">IP:</string>
    <string name="menu_icon_author">Find authors</string>
    <string name="menu_icon_book">Find books</string>
    <string name="menu_icon_quotation">Find quotation</string>
</resources>